[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-neuron-documentation-mcp-server"
version = "0.1.0"
description = "MCP server for AWS Neuron documentation search and retrieval"
authors = [
    {name = "John Gray", email = "grayjh@amazon.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.8"

[project.scripts]
aws-neuron-documentation-mcp-server = "aws_neuron_documentation_mcp_server.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_neuron_documentation_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]